[lworld] C1 crashes when compiling _defaultvalue referencing unresolved inline type

XMLWordPrintable

      # Internal Error (/oracle/valhalla2/open/src/hotspot/share/ci/ciMetadata.hpp:113), pid=8622, tid=8637
      # assert(is_valuetype()) failed: bad cast

      Current CompileTask:
      C1: 9054 4144 b 3 TestUnresolvedDefault::main (5 bytes)

      Stack: [0x00007f913cf29000,0x00007f913d02a000], sp=0x00007f913d027b80, free space=1018k
      Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0x65a42c] GraphBuilder::default_value(int)+0x1cc
      V [libjvm.so+0x66a650] GraphBuilder::iterate_bytecodes_for_block(int)+0x20a0
      V [libjvm.so+0x66a8ad] GraphBuilder::iterate_all_blocks(bool)+0x9d
      V [libjvm.so+0x6665d5] GraphBuilder::try_inline_full(ciMethod*, bool, bool, Bytecodes::Code, Instruction*)+0xa15
      V [libjvm.so+0x666dfd] GraphBuilder::try_inline(ciMethod*, bool, bool, Bytecodes::Code, Instruction*)+0x19d
      V [libjvm.so+0x667c1b] GraphBuilder::invoke(Bytecodes::Code)+0xcdb
      V [libjvm.so+0x668c5b] GraphBuilder::iterate_bytecodes_for_block(int)+0x6ab
      V [libjvm.so+0x66a899] GraphBuilder::iterate_all_blocks(bool)+0x89
      V [libjvm.so+0x66b987] GraphBuilder::GraphBuilder(Compilation*, IRScope*)+0x447
      V [libjvm.so+0x67c43f] IR::IR(Compilation*, ciMethod*, int)+0x63f
      V [libjvm.so+0x63b481] Compilation::build_hir() [clone .part.0]+0x261
      V [libjvm.so+0x63ff0c] Compilation::compile_java_method()+0x1bc
      V [libjvm.so+0x640d14] Compilation::compile_method()+0x1d4
      V [libjvm.so+0x641735] Compilation::Compilation(AbstractCompiler*, ciEnv*, ciMethod*, int, BufferBlob*, DirectiveSet*)+0x385
      V [libjvm.so+0x642612] Compiler::compile_method(ciEnv*, ciMethod*, int, DirectiveSet*)+0x142
      V [libjvm.so+0x94e07e] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x45e
      V [libjvm.so+0x94fbb8] CompileBroker::compiler_thread_loop()+0xab8
      V [libjvm.so+0x17657a6] JavaThread::thread_main_inner()+0x226
      V [libjvm.so+0x176b690] Thread::call_run()+0x100
      V [libjvm.so+0x144a7e6] thread_native_entry(Thread*)+0x116

            Assignee:
            Tobias Hartmann
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: