8247309: [lworld] C1 crashes when compiling _defaultvalue referencing unresolved inline type